Add profiles for different OS and use classifier to create artifacts specifically for the different OS (#32)
* Add profiles for different OS and use classifier to create artifacts specifically for the different OS

* Add explanation for classifier

* Always create platform artifacts

* Eliminate warning